--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </main>
 
 <footer>
-    <aside class="footer">
+    <aside id="footer" class="footer">
         <nav class="rij">
             <nav class="kolom33">
                 <h2>Contact</h2>
