Reworked blocks, and a lot more

--- a/html/contact.html
+++ b/html/contact.html
@@ -13,7 +13,6 @@
     <a href="../index.html">
         <img id="logo" src="../images/logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
-    <h1>Immobili&euml;n Wyns</h1>
     <div></div>
 </header>
 
@@ -33,38 +32,35 @@
             informatie kunt u ons altijd contacteren via onderstaand formulier</p>
         <br>
         <section class="rij">
-            <section class="kolom50">
-                <form action="contactComplete.html">
-                    <section class="rij">
-                        <section class="kolom50">
-                            <label for="voornaam">Voornaam:</label><br>
-                            <input class="contactI" id="voornaam" type="text" name="voornaam" size="40" required><br>
-                            <label for="achternaam">Achternaam</label><br>
-                            <input class="contactI" id="achternaam" type="text" name="achternaam" size="40" required><br>
-                            <label for="telefoon">Telefoon:</label><br>
-                            <input class="contactI" id="telefoon" type="text" name="telefoon" size="40"
-                                   pattern="^0[1-9][0-9]{7,8}$" required><br>
-                            <label for="email">Email adres:</label><br>
-                            <input class="contactI" id="email" type="text" name="email" size="40"
-                                   pattern="[^@]+@[^@]+\.[a-zA-Z]{2,}" required>
-                            <br>
-                            <br>
-                            Hoe wenst u bereikt te worden?<br>
-                            <input type="radio" id="rbtelefoon" name="contact" value="telefoon" checked>
-                            <label class="cRB" for="rbtelefoon">Telefonisch</label><br>
-                            <input type="radio" id="rbemail" name="contact" value="email">
-                            <label class="cRB" for="rbemail">Via email</label><br>
-                            <input type="submit" value="Verzend" class="button">
-                        </section>
-                        <section class="kolom50">
-                            <label for="berichtVeld">Bericht:</label>
-                            <textarea class="contactI" name="bericht" id="berichtVeld" cols="60" rows="10"></textarea>
-                        </section>
-                    </section>
-                </form>
+            <form action="contactComplete.html">
+                <section class="kolom50">
+                    <label for="voornaam">Voornaam:</label><br>
+                    <input class="contactI" id="voornaam" type="text" name="voornaam" size="40" required><br>
+                    <label for="achternaam">Achternaam</label><br>
+                    <input class="contactI" id="achternaam" type="text" name="achternaam" size="40" required><br>
+                    <label for="telefoon">Telefoon:</label><br>
+                    <input class="contactI" id="telefoon" type="text" name="telefoon" size="40"
+                           pattern="^0[1-9][0-9]{7,8}$" required><br>
+                    <label for="email">Email adres:</label><br>
+                    <input class="contactI" id="email" type="text" name="email" size="40"
+                           pattern="[^@]+@[^@]+\.[a-zA-Z]{2,}" required>
+                    <br>
+                    <br>
+                    Hoe wenst u bereikt te worden?<br>
+                    <input type="radio" id="rbtelefoon" name="contact" value="telefoon" checked>
+                    <label class="cRB" for="rbtelefoon">Telefonisch</label><br>
+                    <input type="radio" id="rbemail" name="contact" value="email">
+                    <label class="cRB" for="rbemail">Via email</label><br>
+                    <input type="submit" value="Verzend" class="button">
+                </section>
 
-            </section>
+                <section class="kolom50">
+                    <label for="berichtVeld">Bericht:</label>
+                    <textarea class="contactI" name="bericht" id="berichtVeld" cols="50" rows="10"></textarea>
+                </section>
+            </form>
         </section>
+    </section>
     </section>
 
     <section>
@@ -94,6 +90,15 @@
                 </section>
             </section>
         </section>
+
+        <iframe
+                width="600"
+                height="450"
+                frameborder="0" style="border:0"
+                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDddmE1I5ZE1mySoFibt-h-s0tyvV87Idc
+    &q=Pylyserlaan+112,Koksijde" allowfullscreen>
+        </iframe>
+
     </section>
 </main>
 <footer>
