--- a/html/garagebox1.html
+++ b/html/garagebox1.html
@@ -2,10 +2,10 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Huis 1</title>
-    <link rel="stylesheet" href="../css/basis.css">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Garagebox</title>
     <link rel="stylesheet" href="../css/detail.css">
+    <link rel="stylesheet" href="../css/verkoopverhuur.css">
+    <link rel="stylesheet" href="../css/basis.css">
 </head>
 <body>
 <header class="limited">
@@ -29,37 +29,30 @@
         <h1>Moderne villa op 1km van het strand</h1>
 
         <section class="rij2KolomOngelijk">
-            <img id="hoofdfoto" src="../images/Verhuur/fullsize/Huis3.jpg" alt="Een foto van een vrijstaand wit huis" width="480" height="360">
-
+            <img id="hoofdfoto" src="../images/Verhuur/fullsize/garagebox1.jpg" alt="Een foto van twee garageboxen waarvan 1 open en 1 gesloten is" width="480" height="360">
             <section class="kolom33 description">
-                <h2>&euro;700 / maand</h2>
-                <h3>4 slaapkamers, 3 parkeerplaatsen, 2 badkamers, open haard</h3>
+                <h2>&euro;40 / maand</h2>
+                <h3>Boxgarage, 3.5m x 2m (7m2)</h3>
 
                 <ul>Te huren op basis van
                     <li>Maandverhuur</li>
-                    <li>Weekverhuur</li>
-                    <li>Midweekverhuur</li>
                     <li>Jaarverhuur</li>
                 </ul>
-
             </section>
-
         </section>
 
         <section class="rij3KolomGelijk">
             <section class="kolom33">
                 <h3>Beschrijving</h3>
-                <p>Gezellige bemeubelde moderne villa, dicht gelegen bij het strand van oostende. en lult nogwa meer
+                <p>Afgeschermde garagenboxen op ongeveer 2km van het centrum van Koksijde
                 </p>
             </section>
             <section class="kolom33">
                 <h3>Specificaties</h3>
                 <ul>
-                    <li>Living met open haard</li>
-                    <li>2 badkamers + 1 toilet</li>
-                    <li>4 slaapkamers</li>
-                    <li>Grote keuken</li>
-                    <li>Ruime inkomhal</li>
+                    <li>Breedte: 2 meter</li>
+                    <li>Diepte: 3.5 meter</li>
+                    <li>Afsluitbaar</li>
                 </ul>
             </section>
             <section class="kolom33">
