--- a/html/verhuur.html
+++ b/html/verhuur.html
@@ -13,7 +13,6 @@
     <a href="../index.html">
         <img id="logo" src="../images/logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
-    <h1>Immobili&euml;n Wyns</h1>
     <div></div>
 </header>
 
@@ -59,130 +58,99 @@
     </aside>
 
     <article class="limited">
-        <section class="rij">
-            <section class="vKolom">
-                <section class="vBlock">
-                    <a href="villa1.html">
-                        <img class="vImg" src="../images/Verhuur/thumbnails/villa1.JPG" alt="Foto van een villa"
-                             width="205"
-                             height="140">
-                        <h2>Villa</h2>
-                        <p>&euro; 920</p>
-                    </a>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                    <a href="huis1.html">
-                        <img class="vImg" src="../images/Verhuur/thumbnails/huis3.jpg" alt="Foto van een vrijstaand huis met garage"
-                             width="205"
-                             height="140">
-                        <h2>Huis</h2>
-                        <p>&euro; 700</p>
-                    </a>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                    <a href="huis2.html">
-                        <img class="vImg" src="../images/Verhuur/thumbnails/huis4.png"
-                             alt="Foto van een ingesloten huis" width="205"
-                             height="140">
-                        <h2>Huis</h2>
-                        <p>&euro; 650</p>
-                    </a>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                    <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/thumbnails/appartement1.png"
-                             alt="Foto van een appartement" width="205"
-                             height="140">
-                        <h2>Appartement</h2>
-                        <p>&euro; 640</p>
-                    </a>
-                </section>
-            </section>
+        <section class="vBlock">
+            <a href="garagebox1.html">
+                <img class="vImg" src="../images/Verhuur/thumbnails/garagebox1.jpg"
+                     alt="Foto van vier garageboxen op een rij" width="205" height="140">
+                <h2>Garagebox</h2>
+                <p>&euro; 40</p>
+            </a>
         </section>
-        <section class="rij">
-            <section class="vKolom">
-                <section class="vBlock">
-                    <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/thumbnails/appartement2.png" alt="Foto van een appartement"
-                             width="205"
-                             height="140">
-                        <h2>Appartement</h2>
-                        <p>&euro; 600</p>
-                    </a>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                    <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/thumbnails/appartement3.png" alt="Foto van een appartement"
-                             width="205"
-                             height="140">
-                        <h2>Appartement</h2>
-                        <p>&euro; 440</p>
-                    </a>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                    <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/thumbnails/appartement4.jpg" alt="Foto van een appartement"
-                             width="205"
-                             height="140">
-                        <h2>Appartement</h2>
-                        <p>&euro; 400</p>
-                    </a>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                    <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/thumbnails/garagebox1.jpg"
-                             alt="Foto van een rij garageboxen" width="205"
-                             height="140">
-                        <h2>Garagebox</h2>
-                        <p>&euro; 50</p>
-                    </a>
-                </section>
-            </section>
-        </section>
-        <section class="rij">
-            <section class="vKolom">
-                <section class="vBlock">
-                    <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/thumbnails/garagebox2.jpg"
-                             alt="Foto van vier garageboxen op een rij" width="205" height="140">
-                        <h2>Garagebox</h2>
-                        <p>&euro; 40</p>
-                    </a>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                    <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/thumbnails/garagebox3.jpg" alt="Foto van een villa"
-                             width="205"
-                             height="140">
-                        <h2>Garagebox</h2>
-                        <p>&euro; 35</p>
-                    </a>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                </section>
-            </section>
+        <section class="vBlock">
+            <a href="garagebox2.html">
+                <img class="vImg" src="../images/Verhuur/thumbnails/garagebox2.jpg"
+                     alt="Foto van een rij garageboxen" width="205"
+                     height="140">
+                <h2>Garagebox</h2>
+                <p>&euro; 50</p>
+            </a>
         </section>
 
+        <section class="vBlock">
+            <a href="appartement.html">
+                <img class="vImg" src="../images/Verhuur/thumbnails/appartement4.jpg" alt="Foto van een appartement"
+                     width="205"
+                     height="140">
+                <h2>Appartement</h2>
+                <p>&euro; 400</p>
+            </a>
+        </section>
+        <section class="vBlock">
+            <a href="../index.html">
+                <img class="vImg" src="../images/Verhuur/thumbnails/appartement.jpg" alt="Foto van een appartement"
+                     width="205"
+                     height="140">
+                <h2>Appartement</h2>
+                <p>&euro; 430</p>
+            </a>
+        </section>
+        <section class="vBlock">
+            <a href="../index.html">
+                <img class="vImg" src="../images/Verhuur/thumbnails/appartement3.png"
+                     alt="Foto van een appartement"
+                     width="205"
+                     height="140">
+                <h2>Appartement</h2>
+                <p>&euro; 440</p>
+            </a>
+        </section>
+        <section class="vBlock">
+            <a href="../index.html">
+                <img class="vImg" src="../images/Verhuur/thumbnails/appartement2.png"
+                     alt="Foto van een appartement"
+                     width="205"
+                     height="140">
+                <h2>Appartement</h2>
+                <p>&euro; 600</p>
+            </a>
+        </section>
+        <section class="vBlock">
+            <a href="../index.html">
+                <img class="vImg" src="../images/Verhuur/thumbnails/appartement1.png"
+                     alt="Foto van een appartement" width="205"
+                     height="140">
+                <h2>Appartement</h2>
+                <p>&euro; 640</p>
+            </a>
+        </section>
+        <section class="vBlock">
+            <a href="huis2.html">
+                <img class="vImg" src="../images/Verhuur/thumbnails/huis4.png"
+                     alt="Foto van een ingesloten huis" width="205"
+                     height="140">
+                <h2>Huis</h2>
+                <p>&euro; 650</p>
+            </a>
+        </section>
+        <section class="vBlock">
+            <a href="huis1.html">
+                <img class="vImg" src="../images/Verhuur/thumbnails/huis3.jpg"
+                     alt="Foto van een vrijstaand huis met garage"
+                     width="205"
+                     height="140">
+                <h2>Huis</h2>
+                <p>&euro; 700</p>
+            </a>
+        </section>
+        <section class="vBlock">
+            <a href="villa1.html">
+                <img class="vImg" src="../images/Verhuur/thumbnails/villa1.JPG" alt="Foto van een villa"
+                     width="205"
+                     height="140">
+                <h2>Villa</h2>
+                <p>&euro; 920</p>
+            </a>
+        </section>
     </article>
 
 
