--- a/html/verkoop.html
+++ b/html/verkoop.html
@@ -14,7 +14,6 @@
     <a href="../index.html">
         <img id="logo" src="../images/logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
-    <h1>Immobili&euml;n Wyns</h1>
     <div></div>
 </header>
 
@@ -57,53 +56,48 @@
     </section>
 
     <article class="limited">
-        <section class="rij4KolomGelijk">
-            <section class="vKolom">
-                <section class="vBlock">
-                    <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/thumbnails/villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                        <h2>Villa</h2><p>&euro; 920</p>
-                    </a>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                    <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/thumbnails/villa2.jpg" alt="Foto van een villa" width="205" height="140" >
-                        <h2>Villa</h2><p>&euro; 890</p>
-                    </a>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/thumbnails/villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                    <h2>Villa</h2><p>&euro; 920</p>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/thumbnails/villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                    <h2>Villa</h2><p>&euro; 920</p>
-
-
-                </section>
-            </section>
+        <section class="vBlock">
+            <a href="../index.html">
+                <img class="vImg" src="../images/Verhuur/thumbnails/villa1.JPG" alt="Foto van een villa" width="205"
+                     height="140">
+                <h2>Villa</h2>
+                <p>&euro; 920</p>
+            </a>
         </section>
-        <div class="rij">
-            <div class="vKolom">
-                <p>Test</p>
-            </div>
-            <div class="vKolom">
-                <p> Test 2</p>
-            </div>
-            <div class="vKolom">
-                <p>test 3</p>
-            </div>
-            <div class="vKolom">
-                <section>
-                    <h2>Garage</h2><p>&euro; 60</p>
-                </section>
-            </div>
+        <section class="vBlock">
+            <a href="../index.html">
+                <img class="vImg" src="../images/Verhuur/thumbnails/villa2.jpg" alt="Foto van een villa" width="205"
+                     height="140">
+                <h2>Villa</h2>
+                <p>&euro; 890</p>
+            </a>
+        </section>
+        <section class="vBlock">
+            <img class="vImg" src="../images/Verhuur/thumbnails/villa1.JPG" alt="Foto van een villa" width="205"
+                 height="140">
+            <h2>Villa</h2>
+            <p>&euro; 920</p>
+        </section>
+        <section class="vBlock">
+            <img class="vImg" src="../images/Verhuur/thumbnails/villa1.JPG" alt="Foto van een villa" width="205"
+                 height="140">
+            <h2>Villa</h2>
+            <p>&euro; 920</p>
+        </section>
+        <div class="vBlock">
+            <p>Test</p>
+        </div>
+        <div class="vBlock">
+            <p> Test 2</p>
+        </div>
+        <div class="vBlock">
+            <p>test 3</p>
+        </div>
+        <div class="vBlock">
+            <section>
+                <h2>Garage</h2>
+                <p>&euro; 60</p>
+            </section>
         </div>
     </article>
 
