--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <a href="index.html">
         <img id="logo" src="images/logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
-    <h1>Immobili&euml;n Wyns</h1>
     <div></div>
 </header>
 
@@ -26,11 +25,7 @@
 </nav>
 
 <main class="limited">
-    <picture>
-        <source media="(min-width: 700px)" srcset="images/header.jpg">
-        <img src="images/header.jpg" alt="Foto's van huizen aan de kust" width="1024" height="286">
-    </picture>
-
+        <img id="headerimg" src="images/header.jpg" alt="Foto's van huizen aan de kust" width="1024" height="286">
     <h2>
         Immobili&euml;n kantoor Wyns, al meer dan 10 jaar tot uw dienst.
     </h2>
