--- a/html/contact.html
+++ b/html/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header class="limited">
-    <a href="../index.html">
+    <a href="../%23">
         <img id="logo" src="../images/logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
     <div></div>
@@ -18,7 +18,7 @@
 
 <nav class="navigatie">
     <section class="limited">
-        <a href="../index.html" id="navFirst">Home</a>
+        <a href="../%23" id="navFirst">Home</a>
         <a href="verhuur.html">Verhuur</a>
         <a href="verkoop.html">Verkoop</a>
         <a class="active" href="contact.html">Contact</a>
@@ -61,17 +61,15 @@
             </form>
         </section>
     </section>
-    </section>
 
     <section>
-        <section class="rij">
-            <section class="kolom50">
+            <section class="vBlock">
                 <h2>Hoe te bereiken?</h2>
                 <img id="gevelFoto" src="../images/fotogevel.png" alt="Foto van de voorkant van ons filiaal" width="500"
                      height="300">
             </section>
 
-            <section class="kolom50">
+            <section class="vBlock">
                 <section id="contactInfo">
                     <p>U bent natuurlijk ook altijd welkom om eens binnen te springen voor een vrijblevend gesprek met
                         onze
@@ -80,7 +78,6 @@
                         8670 Koksijde
                     </strong>
                 </section>
-                <div class="endFloat"></div>
                 <section class="oUren">
                     <h2>Openingsuren</h2>
                     <p>Maandag: gesloten</p>
@@ -88,9 +85,8 @@
                     <p>Zaterdag: 8 - 18u</p>
                     <p>Zondag: Gesloten</p>
                 </section>
-            </section>
-        </section>
 
+            </section>
         <iframe
                 width="600"
                 height="450"
@@ -114,7 +110,7 @@
                 <h2>Navigatie</h2>
                 <nav class="navigatie-verticaal">
                     <ul>
-                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../%23">Home</a></li>
                         <li><a href="verhuur.html">Verhuur</a></li>
                         <li><a href="verkoop.html">Verkoop</a></li>
                         <li><a href="../html/contact.html">Contact</a></li>
