--- a/html/garagebox1.html
+++ b/html/garagebox1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="limited">
-    <a href="../index.html">
+    <a href="../%23">
         <img id="logo" src="../images/logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
     <div></div>
@@ -17,7 +17,7 @@
 
 <nav class="navigatie">
     <section class="limited">
-        <a href="../index.html" id="navFirst">Home</a>
+        <a href="../%23" id="navFirst">Home</a>
         <a href="verhuur.html">Verhuur</a>
         <a href="verkoop.html">Verkoop</a>
         <a href="contact.html">Contact</a>
@@ -32,7 +32,7 @@
             <img id="hoofdfoto" src="../images/Verhuur/fullsize/garagebox1.jpg" alt="Een foto van twee garageboxen waarvan 1 open en 1 gesloten is" width="480" height="360">
             <section class="kolom33 description">
                 <h2>&euro;40 / maand</h2>
-                <h3>Boxgarage, 3.5m x 2m (7m2)</h3>
+                <h3>Boxgarage, 3.5m x 2m (7m<sup>2</sup>)</h3>
 
                 <ul>Te huren op basis van
                     <li>Maandverhuur</li>
@@ -76,7 +76,7 @@
                 <h2>Navigatie</h2>
                 <nav class="navigatie-verticaal">
                     <ul>
-                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../%23">Home</a></li>
                         <li><a href="verhuur.html">Verhuur</a></li>
                         <li><a href="verkoop.html">Verkoop</a></li>
                         <li><a href="contact.html">Contact</a></li>
