--- a/html/verhuur.html
+++ b/html/verhuur.html
@@ -86,7 +86,7 @@
             </a>
         </section>
         <section class="vBlock">
-            <a href="../index.html">
+            <a href="#">
                 <img class="vImg" src="../images/Verhuur/thumbnails/appartement.jpg" alt="Foto van een appartement"
                      width="205"
                      height="140">
@@ -95,7 +95,7 @@
             </a>
         </section>
         <section class="vBlock">
-            <a href="../index.html">
+            <a href="#">
                 <img class="vImg" src="../images/Verhuur/thumbnails/appartement3.png"
                      alt="Foto van een appartement"
                      width="205"
@@ -105,7 +105,7 @@
             </a>
         </section>
         <section class="vBlock">
-            <a href="../index.html">
+            <a href="#">
                 <img class="vImg" src="../images/Verhuur/thumbnails/appartement2.png"
                      alt="Foto van een appartement"
                      width="205"
@@ -115,7 +115,7 @@
             </a>
         </section>
         <section class="vBlock">
-            <a href="../index.html">
+            <a href="#">
                 <img class="vImg" src="../images/Verhuur/thumbnails/appartement1.png"
                      alt="Foto van een appartement" width="205"
                      height="140">
@@ -124,7 +124,7 @@
             </a>
         </section>
         <section class="vBlock">
-            <a href="huis2.html">
+            <a href="#">
                 <img class="vImg" src="../images/Verhuur/thumbnails/huis4.png"
                      alt="Foto van een ingesloten huis" width="205"
                      height="140">
@@ -133,7 +133,7 @@
             </a>
         </section>
         <section class="vBlock">
-            <a href="huis1.html">
+            <a href="#">
                 <img class="vImg" src="../images/Verhuur/thumbnails/huis3.jpg"
                      alt="Foto van een vrijstaand huis met garage"
                      width="205"
@@ -143,7 +143,7 @@
             </a>
         </section>
         <section class="vBlock">
-            <a href="villa1.html">
+            <a href="#">
                 <img class="vImg" src="../images/Verhuur/thumbnails/villa1.JPG" alt="Foto van een villa"
                      width="205"
                      height="140">
@@ -152,8 +152,6 @@
             </a>
         </section>
     </article>
-
-
 </main>
 <footer>
     <aside class="footer">
