--- a/html/verkoop.html
+++ b/html/verkoop.html
@@ -28,77 +28,109 @@
 <main>
 
     <section class="vFilter limited">
-        <label for="sFilterSlpk">Filters:</label>
-        <select name="slpkFilter" id="sFilterSlpk">
-            <option value="1 Slaapkamer">1 Slaapkamer</option>
-            <option value="2 Slaapkamers">2 Slaapkamers</option>
-            <option value="3 Slaapkamers">3 Slaapkamers</option>
-            <option value="4+ Slaapkamers">4+ Slaapkamers</option>
+        <label for="sTypeV">Filters:</label>
+        <select name="sTypeV" id="sTypeV">
+            <option value="Nieuw">Nieuw</option>
+            <option value="Herverkoop">Herverkoop</option>
         </select>
         <label for="sFilterPrijs"></label>
         <select name="prijsFilter" id="sFilterPrijs">
-            <option value="< 250">&lt; &euro;249</option>
-            <option value="250-500">&euro;250 - &euro;499</option>
-            <option value="500-750">&euro;500 - &euro;749</option>
-            <option value="750+">&gt; &euro;750</option>
+            <option value="< 250.000">&lt; &euro;249</option>
+            <option value="250.000-500.000">&euro;250 - &euro;499</option>
+            <option value="500.000-750.000">&euro;500 - &euro;749</option>
+            <option value="750.000+">&gt; &euro;750</option>
         </select>
-        <label for="sFilterVerhuur"></label>
-        <select name="sFilterTypeV" id="sFilterVerhuur">
-            <option value="weekend">Weekend</option>
-            <option value="midweek">Midweek</option>
-            <option value="Maand">Maand</option>
-            <option value="Jaar">Jaar</option>
+        <label for="sVerwarming"></label>
+        <select name="sVerwarming" id="sVerwarming">
+            <option value="Gas">Gas</option>
+            <option value="Mazout">Mazout</option>
+            <option value="Elektriciteit">Elektriciteit</option>
         </select>
 
-        <a href="verhuurfiltered.html">
+        <a href="verkoopfiltered.html">
             <button id="vFilterBtn">Zoek</button>
         </a>
     </section>
 
     <article class="limited">
         <section class="vBlock">
-            <a href="../index.html">
-                <img class="vImg" src="../images/Verhuur/thumbnails/villa1.JPG" alt="Foto van een villa" width="205"
+            <a href="#">
+                <img class="vImg" src="../images/verkoop/fullsize/appartement21.jpg" alt="Foto van een villa" width="205"
                      height="140">
-                <h2>Villa</h2>
-                <p>&euro; 920</p>
+                <h2>Appartement</h2>
+                <p>&euro; 240.000</p>
             </a>
         </section>
         <section class="vBlock">
-            <a href="../index.html">
-                <img class="vImg" src="../images/Verhuur/thumbnails/villa2.jpg" alt="Foto van een villa" width="205"
+            <a href="#">
+                <img class="vImg" src="../images/verkoop/fullsize/appartement22.jpg" alt="Foto van een villa" width="205"
                      height="140">
-                <h2>Villa</h2>
-                <p>&euro; 890</p>
+                <h2>Appartement</h2>
+                <p>&euro; 245.000</p>
             </a>
         </section>
         <section class="vBlock">
-            <img class="vImg" src="../images/Verhuur/thumbnails/villa1.JPG" alt="Foto van een villa" width="205"
-                 height="140">
-            <h2>Villa</h2>
-            <p>&euro; 920</p>
+            <a href="#">
+                <img class="vImg" src="../images/verkoop/fullsize/appartement23.jpg" alt="Foto van een villa" width="205"
+                     height="140">
+                <h2>Appartement</h2>
+                <p>&euro; 300.000</p>
+            </a>
         </section>
         <section class="vBlock">
-            <img class="vImg" src="../images/Verhuur/thumbnails/villa1.JPG" alt="Foto van een villa" width="205"
-                 height="140">
-            <h2>Villa</h2>
-            <p>&euro; 920</p>
+            <a href="#">
+                <img class="vImg" src="../images/verkoop/fullsize/appartement%2024.jpg" alt="Foto van een villa" width="205"
+                     height="140">
+            </a>
+            <h2>Appartement</h2>
+            <p>&euro; 320.000</p>
         </section>
-        <div class="vBlock">
-            <p>Test</p>
-        </div>
-        <div class="vBlock">
-            <p> Test 2</p>
-        </div>
-        <div class="vBlock">
-            <p>test 3</p>
-        </div>
-        <div class="vBlock">
-            <section>
-                <h2>Garage</h2>
-                <p>&euro; 60</p>
-            </section>
-        </div>
+        <section class="vBlock">
+            <a href="#">
+                <img class="vImg" src="../images/verkoop/fullsize/huis21.jpg" alt="Foto van een villa" width="205"
+                     height="140">
+                <h2>Huis</h2>
+                <p>&euro; 350.000</p>
+            </a>
+        </section>
+        <section class="vBlock">
+            <a href="#">
+                <img class="vImg" src="../images/verkoop/fullsize/huis22.jpg" alt="Foto van een villa" width="205"
+                     height="140">
+                <h2>Bungalow</h2>
+                <p>&euro; 375.000</p>
+            </a>
+        </section>
+        <section class="vBlock">
+            <a href="#">
+                <img class="vImg" src="../images/verkoop/fullsize/huis23.jpg" alt="Foto van een villa" width="205"
+                     height="140">
+                <h2>Huis</h2>
+                <p>&euro; 450.000</p>
+            </a>
+        </section>
+        <section class="vBlock">
+            <a href="#">
+                <img class="vImg" src="../images/verkoop/fullsize/huis24.jpg" alt="Foto van een villa" width="205"
+                     height="140">
+            </a>
+            <h2>Huis</h2>
+            <p>&euro; 465.000</p>
+        </section>
+        <section class="vBlock">
+            <img class="vImg" src="../images/verkoop/fullsize/huis25.jpg" alt="Foto van een villa" width="205"
+                 height="140">
+            <h2>Huis</h2>
+            <p>&euro; 475.000</p>
+        </section>
+        <section class="vBlock">
+            <a href="#">
+                <img class="vImg" src="../images/verkoop/fullsize/huis24.jpg" alt="Foto van een villa" width="205"
+                     height="140">
+            </a>
+            <h2>Huis</h2>
+            <p>&euro; 500.000</p>
+        </section>
     </article>
 
 </main>
