--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <footer>
     <aside id="footer" class="footer">
-        <nav class="rij">
+        <section class="rij">
             <nav class="kolom33">
                 <h2>Contact</h2>
                 <a id="mailto" href="mailto:contact@immowyns.be">contact@immowyns.be</a>
@@ -63,7 +63,7 @@
                 <p>Zaterdag: 8 - 18u</p>
                 <p>Zondag: Gesloten</p>
             </nav>
-        </nav>
+        </section>
     </aside>
 </footer>
 
