--- a/html/villa1.html
+++ b/html/villa1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="limited">
-    <a href="../index.html">
+    <a href="../%23">
         <img id="logo" src="../images/logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
     <h1>Immobili&euml;n Wyns</h1>
@@ -18,7 +18,7 @@
 
 <nav class="navigatie">
     <section class="limited">
-        <a href="../index.html" id="navFirst">Home</a>
+        <a href="../%23" id="navFirst">Home</a>
         <a href="verhuur.html">Verhuur</a>
         <a href="verkoop.html">Verkoop</a>
         <a href="contact.html">Contact</a>
@@ -83,7 +83,7 @@
                 <h2>Navigatie</h2>
                 <nav class="navigatie-verticaal">
                     <ul>
-                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../%23">Home</a></li>
                         <li><a href="verhuur.html">Verhuur</a></li>
                         <li><a href="verkoop.html">Verkoop</a></li>
                         <li><a href="contact.html">Contact</a></li>
