--- a/html/contact.html
+++ b/html/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header class="limited">
-    <a href="../%23">
+    <a href="../index.html">
         <img id="logo" src="../images/logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
     <div></div>
@@ -18,7 +18,7 @@
 
 <nav class="navigatie">
     <section class="limited">
-        <a href="../%23" id="navFirst">Home</a>
+        <a href="../index.html" id="navFirst">Home</a>
         <a href="verhuur.html">Verhuur</a>
         <a href="verkoop.html">Verkoop</a>
         <a class="active" href="contact.html">Contact</a>
@@ -110,7 +110,7 @@
                 <h2>Navigatie</h2>
                 <nav class="navigatie-verticaal">
                     <ul>
-                        <li><a href="../%23">Home</a></li>
+                        <li><a href="../index.html">Home</a></li>
                         <li><a href="verhuur.html">Verhuur</a></li>
                         <li><a href="verkoop.html">Verkoop</a></li>
                         <li><a href="../html/contact.html">Contact</a></li>
