--- a/html/verkoopfiltered.html
+++ b/html/verkoopfiltered.html
@@ -85,7 +85,7 @@
                 <h2>Navigatie</h2>
                 <nav class="navigatie-verticaal">
                     <ul>
-                        <li><a href="../%23">Home</a></li>
+                        <li><a href="../index.html">Home</a></li>
                         <li><a href="verhuur.html">Verhuur</a></li>
                         <li><a href="verkoop.html">Verkoop</a></li>
                         <li><a href="contact.html">Contact</a></li>
